# solidea-sizing-assistant

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  Dockerfile  PROJECT_CHARTER.md  README.md  TASKS.md  pyproject.toml  railway.json  render.yaml
.github/workflows/: ci.yml
app/: main.py  models.py
app/sizing/: engine.py  loader.py
data/: arm-sleeves.json  bras.json  capris.json  leggings.json  schema.json  socks.json
docs/decisions/: 001-initial-architecture.md
docs/runbooks/: deployment.md  local-development.md  owner-guide.md
n8n/: README.md  email-template.html  sizing-email-workflow.json
tests/: conftest.py  test_api.py  test_placeholder.py  test_sizing_logic.py
widget/: shopify-install.liquid  sizing-widget.js  test-page.html
